--- a/src/main/resources/menu/powerleaderboardmenu.yml
+++ b/src/main/resources/menu/powerleaderboardmenu.yml
@@ -1,74 +1,51 @@
 Main_Menu:
-  Title: "&5&lPower Sell-Shop"
-  Size: "9 * 6"
+  Title: "&5&lPower Leaderboard"
+  Size: "9 * 5"
   Buttons:
-    Player_Info:
-      Slot: "4"
+    Player_Top_1:
+      Slot: "13"
       Material: PLAYER_HEAD
-      Player_Skull: true
-      Glow: true
-      Title: "&6&lInfo of %player_name%"
+      Player_Skull_Name: "%powercurrency_ptopname1%"
+      Glow: false
+      Title: "&6&l#1 : %powercurrency_ptopname1%"
       Lore:
-        - "&6Money: %vault_eco_balance_formatted%"
-        - "&6Power: %powercurrency_playerpower%"
-        - "&6Lives: %lives_lives%"
-    Spider_Eye:
-      Slot: "9 * 2 + 2"
-      Material: SPIDER_EYE
-      Title: "&5&lSpider Eye"
+        - "&6Power : %powercurrency_ptopbal1%"
+    Player_Top_2:
+      Slot: "21"
+      Material: PLAYER_HEAD
+      Player_Skull_Name: "%powercurrency_ptopname2%"
+      Glow: false
+      Title: "&6&l#2 : %powercurrency_ptopname2%"
       Lore:
-        - "&7Sell Price : 1"
-      Click:
-        Shop:
-          Price: 1
-    Rotten_Flesh:
-      Slot: "9 * 2 + 3"
-      Material: ROTTEN_FLESH
-      Title: "&5&lRotten Flesh"
+        - "&6Power : %powercurrency_ptopbal2%"
+    Player_Top_3:
+      Slot: "23"
+      Material: PLAYER_HEAD
+      Player_Skull_Name: "%powercurrency_ptopname3%"
+      Glow: false
+      Title: "&6&l#3 : %powercurrency_ptopname3%"
       Lore:
-        - "&7Sell Price : 2"
-      Click:
-        Shop:
-          Price: 2
-    Amethyst_Shard:
-      Slot: "9 * 2 + 4"
-      Material: AMETHYST_SHARD
-      Title: "&5&lAmethyst Shard"
+        - "&6Power : %powercurrency_ptopbal3%"
+    Player_Top_4:
+      Slot: "29"
+      Material: PLAYER_HEAD
+      Player_Skull_Name: "%powercurrency_ptopname4%"
+      Glow: false
+      Title: "&6&l#4 : %powercurrency_ptopname4%"
       Lore:
-        - "&7Sell Price : 3"
-      Click:
-        Shop:
-          Price: 3
-    Nether_Ward:
-      Slot: "9 * 2 + 5"
-      Material: NETHER_WART
-      Title: "&5&lNether Wart"
+        - "&6Power : %powercurrency_ptopbal4%"
+    Player_Top_5:
+      Slot: "33"
+      Material: PLAYER_HEAD
+      Player_Skull_Name: "%powercurrency_ptopname5%"
+      Glow: false
+      Title: "&6&l#4 : %powercurrency_ptopname5%"
       Lore:
-        - "&7Sell Price : 4"
-      Click:
-        Shop:
-          Price: 4
-    Magma_Cream:
-      Slot: "9 * 2 + 6"
-      Material: MAGMA_CREAM
-      Title: "&5&lMagma Cream"
-      Lore:
-        - "&7Sell Price : 6"
-      Click:
-        Shop:
-          Price: 6
-    Blaze_Rod:
-      Slot: "9 * 3 + 2"
-      Material: BLAZE_ROD
-      Title: "&5&lBlaze Rod"
-      Lore:
-        - "&7Sell Price : 7"
-      Click:
-        Sold_Message: "&aSold Blaze Rod!"
-        Insufficient_Message: "&cInsufficient Blaze Rod!"
-        Shop:
-          Price: 7
-
+        - "&6Power : %powercurrency_ptopbal5%"
+    0:
+      Slot: "4"
+      Material: GRAY_STAINED_GLASS_PANE
+      Title: " "
     1:
       Slot: "9 * 0 + 0"
       Material: GRAY_STAINED_GLASS_PANE
@@ -134,47 +111,31 @@ Main_Menu:
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
     18:
-      Slot: "9 * 5 + 0"
+      Slot: "9 * 4 + 1"
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
     19:
-      Slot: "9 * 5 + 8"
+      Slot: "9 * 4 + 2"
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
     20:
-      Slot: "9 * 6 + 0"
+      Slot: "9 * 4 + 3"
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
     21:
-      Slot: "9 * 6 + 8"
+      Slot: "9 * 4 + 4"
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
     22:
-      Slot: "9 * 5 + 1"
+      Slot: "9 * 4 + 5"
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
     23:
-      Slot: "9 * 5 + 2"
+      Slot: "9 * 4 + 6"
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
     24:
-      Slot: "9 * 5 + 3"
-      Material: GRAY_STAINED_GLASS_PANE
-      Title: " "
-    25:
-      Slot: "9 * 5 + 4"
-      Material: GRAY_STAINED_GLASS_PANE
-      Title: " "
-    26:
-      Slot: "9 * 5 + 5"
-      Material: GRAY_STAINED_GLASS_PANE
-      Title: " "
-    27:
-      Slot: "9 * 5 + 6"
-      Material: GRAY_STAINED_GLASS_PANE
-      Title: " "
-    28:
-      Slot: "9 * 5 + 7"
+      Slot: "9 * 4 + 7"
       Material: GRAY_STAINED_GLASS_PANE
       Title: " "
 
