--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -38,4 +38,10 @@ softdepend: [ AuthMe, BanManager, BungeeChatAPI, CMI, DiscordSRV, Factions, Feud
 # The commands are built at runtime so you can change them easily within the settings.
 # Do not change anything in here, you will break the plugin and get no support.
 #
-commands:  
+commands:
+
+permissions:
+  powercurrency.command.buy:
+    default: true
+  powercurrency.command.pay:
+    default: true
